# BathSpa

./: README.md
CodeLab(AS1)/: README.md
CodeLab/CodeLab(AS1)/: README.md
CodeLab/CodeLab(AS2)/: .clang-format  CMakeLists.txt  README.md
CodeLab/CodeLab(AS2)/include/: GridSlot.h  Product.h  Utils.h  VendingMachine.h
CodeLab/CodeLab(AS2)/src/: GridSlot.cpp  Product.cpp  Utils.cpp  VendingMachine.cpp  main.cpp
Database(AS2)/: STEM_Historical_MYSQL-Full.sql  STEM_Historical_NoSQL.js
Database(AS2)/STEM_Historical_MYSQL/: STEM_Historical.sql
Database(AS2)/STEM_Historical_NoSQL/: events.bson  events.metadata.json
Database/Database(AS2)/: README.md
Database/Database(AS2)/STEM_Historical_MYSQL/: STEM_Historical-Query.sql
Database/Database(AS2)/STEM_Historical_NoSQL/: scientists.bson  scientists.metadata.json
WebDev/: README.md
WebDev(AS1)/2-CssStyling/: README.md
WebDev(AS1)/3-PageLayout/: README.md
WebDev(AS1)/4-WebAccessibility/: README.md
WebDev/WebDev(AS1)/: README.md
WebDev/WebDev(AS1)/1-SemanticMarkup/: README.md
